option to run as DMG and small update to scanline parameters

--- a/bootrom/Makefile
+++ b/bootrom/Makefile
@@ -8,10 +8,17 @@ ROOT_DIR := $(shell git rev-parse --show-toplevel)
 
 build:
 	${PY} logo_to_tiles.py
-	rgbasm -o bootrom.obj bootrom.asm
-	rgblink -m bootrom.map -n bootrom.sym -o bootrom.gb bootrom.obj
-	rgbfix -p0 -v bootrom.gb
-	head -c 256 bootrom.gb > ${ROOT_DIR}/pyboy/core/bootrom.bin
+	rgbasm -o dmgbootrom.obj dmgbootrom.asm
+	rgblink -m dmgbootrom.map -n dmgbootrom.sym -o dmgbootrom.gb dmgbootrom.obj
+	rgbfix -p0 -v dmgbootrom.gb
+	head -c 256 dmgbootrom.gb > ${ROOT_DIR}/pyboy/core/dmgbootrom.bin
+
+	${PY} logo_to_tiles.py
+	rgbasm -o cgbbootrom.obj cgbbootrom.asm
+	rgblink -m cgbbootrom.map -n cgbbootrom.sym -o cgbbootrom.gb cgbbootrom.obj
+	rgbfix -p0 -v cgbbootrom.gb
+	head -c 256 cgbbootrom.gb > ${ROOT_DIR}/pyboy/core/cgbbootrom.bin
+
 
 clean:
 	rm logo.asm bootrom.map bootrom.sym bootrom.obj bootrom.gb
